--- a/client/src/pages/LoginPage/LoginPage.module.css
+++ b/client/src/pages/LoginPage/LoginPage.module.css
@@ -99,7 +99,7 @@
 
 .formInput:focus {
   outline: none;
-  border: 2px solid #c9d6c0; 
+  border: 2px solid #dbe0d8; 
   box-shadow: 0 0 5px rgba(74, 144, 226, 0.5);
   }
   
